Solved a few contrasting errors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -227,7 +227,7 @@ footer {
 .card-title {
   font-weight: 500;
   font-size: 1.8rem;
-  color: #222222;
+  color: #000000;
 }
 
 .join {
